syntax = "proto3";

option java_package = "com.wallet.service";

service DepositService {

    rpc DepositFunds (DepositFundsRequest) returns (DepositFundsResponse) {
    }
}

message DepositFundsRequest {
    int64 userId = 1;
    string amount = 2;
    string currency = 3;
}

message DepositFundsResponse {
}




